WebP image format is not supported https://bugs.webkit.org/show_bug.cgi?id=192672

Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2020-02-12
Reviewed by Youenn Fablet.

Source/WebCore:

Add the mime type and the UTI of the WebP to the list of the allowed image
formats. WebP should be enabled only on macOS and iOS post Catalina.

Tests: fast/images/animated-webp-as-image.html
       fast/images/webp-as-image.html

* platform/MIMETypeRegistry.cpp:
(WebCore::MIMETypeRegistry::supportedImageMIMETypes):
* platform/graphics/cg/ImageDecoderCG.cpp:
(WebCore::animationPropertiesFromProperties):
* platform/graphics/cg/UTIRegistry.cpp:
(WebCore::defaultSupportedImageTypes):

Source/WTF:

Introduce HAVE(WEBP) for macOS and iOS.

* wtf/PlatformHave.h:

LayoutTests:

Disable the tests for all ports and enable it only for [ Catalina+ ].

* TestExpectations:
* fast/images/animated-webp-as-image-expected.html: Added.
* fast/images/animated-webp-as-image.html: Added.
* fast/images/resources/animated-red-green-blue-repeat-infinite.webp: Added.
* fast/images/resources/green-400x400.webp: Added.
* fast/images/webp-as-image-expected.html: Added.
* fast/images/webp-as-image.html: Added.
* platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/220650@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256501 268f45cc-cd09-0410-ab3c-d52691b4dbfc